# Nibbler

./: CMakeLists.txt  Makefile  author  main.cpp  maxScore.txt  nibbler  snake
Ncurses/: Makefile  Ncurses.cpp  Ncurses.hpp
SDL/: Makefile  SDL.cpp  SDL.hpp
SFML/: GameOver.cpp  GameOver.hpp  Makefile  Menu.cpp  Menu.hpp  SFML.cpp  SFML.hpp  SideBar.cpp  SideBar.hpp
inc/: Barrier.hpp  Exception.hpp  Food.hpp  Game.hpp  GameOver.hpp  IGUI.hpp  IObject.hpp  Menu.hpp  SFML.hpp  Score.hpp  SideBar.hpp  Snake.hpp
src/: Barrier.cpp  Exception.cpp  Game.cpp  GameOver.cpp  IObject.cpp  Menu.cpp  SFML.cpp  SideBar.cpp  Snake.cpp  main.cpp
